Fix layout issue in menu

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -383,6 +383,7 @@ a.accordion-toggle, a.accordion-collapsed {
     /* padding: 4px;*/
     padding:0px;
     margin: 0px;
+    flex-direction: column;
 }
 
 .nav > li {
